<resources>
    <string name="app_name">Whatsapp</string>
    <string name="name">Digite seu nome</string>
    <string name="email">Digite seu email</string>
    <string name="password">Digite sua senha</string>
    <string name="bt_login">Logar</string>
    <string name="bt_register">Cadastrar</string>
    <string name="register">Não tem conta? Cadastre-se</string>
    <string name="password_missing">Prencha o campo senha!</string>
    <string name="email_missing">Prencha o campo email!</string>
    <string name="name_missing">Prencha o campo nome!</string>
    <string name="password_weak">Digite uma senha mais forte!</string>
    <string name="email_invalid">Digite um email válido!</string>
    <string name="account_duplicate">Esta conta já foi cadastrada!</string>
    <string name="error_register">\"Erro ao cadastrar usuário: \"</string>
    <string name="user_unregisted">O usuário não esta cadastrado!</string>
    <string name="email_password_wrong">Email e senha não correspodem ao usuário cadastrado!</string>
    <string name="error_login">\"Erro ao logar usuário: \"</string>
    <string name="search">Pesquisar</string>
    <string name="configurations">Configurações</string>
    <string name="logout">Sair</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="conversations">Conversas</string>
    <string name="contacts">Contatos</string>
    <string name="config">Configurações</string>
    <string name="nome_do_usu_rio">Nome do usuário</string>
    <string name="warning_config">Esse não é o seu nome de usuário nem sua senha. Esse nome ficará visivel para seus contatos do WhatsApp</string>
    <string name="permission_denied">Permissões Negadas</string>
    <string name="message_permission_denied">Para utilizar o app é necessário aceitar as permissões</string>
    <string name="confirm">Confirmar</string>
    <string name="error_upload">Erro ao fazer upload da imagem</string>
    <string name="success_upload">Sucesso ao fazer upload da imagem</string>
    <string name="sucess_update_name">Nome atualizado com sucesso</string>
    <string name="name_adapter">Nome</string>
    <string name="email_adapter">Email</string>
    <string name="title_activity_chat">ChatActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>